# advent_of_code_2025_python

./: README.md  pyproject.toml
src/advent_of_code_2025_python/: main.py
src/advent_of_code_2025_python/days/: ADay.py
src/advent_of_code_2025_python/days/day1/: Day1.py  Dial.py
src/advent_of_code_2025_python/days/day2/: Day2.py  RangeAnalyser.py
src/advent_of_code_2025_python/days/day3/: Day3.py  VoltageAnalyser.py
src/advent_of_code_2025_python/days/day4/: Day4.py  RollCleaner.py
src/advent_of_code_2025_python/days/day5/: Day5.py  FreshPart.py
src/advent_of_code_2025_python/days/day6/: Calculator.py  Day6.py
src/advent_of_code_2025_python/days/day7/: BeamLevel.py  Day7.py
src/advent_of_code_2025_python/days/day8/: Day8.py  JunctionBox.py
tests/advent_of_code_2025_python/days/day1/: test_day1.py  test_dial.py
tests/advent_of_code_2025_python/days/day2/: test_RangeAnalyser.py  test_day2.py
tests/advent_of_code_2025_python/days/day3/: test_VoltageAnalyser.py  test_day3.py
tests/advent_of_code_2025_python/days/day4/: test_RollCleaner.py  test_day4.py
tests/advent_of_code_2025_python/days/day5/: test_FreshPart.py  test_day5.py
tests/advent_of_code_2025_python/days/day6/: test_Calculator.py  test_day6.py
tests/advent_of_code_2025_python/days/day7/: test_BeamLevel.py  test_day7.py
tests/advent_of_code_2025_python/days/day8/: test_JunctionBox.py  test_day8.py
