[project]
name = "advent-of-code-2025-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Corentin",email = "corentinf@free.fr"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "advent_of_code_2025_python", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "hypothesis (>=6.148.7,<7.0.0)"
]
